--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,15 @@
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Home</ion-title>
+  <ion-navbar primary>
+    <ion-title>
+      Ionic Blank
+    </ion-title>
   </ion-navbar>
 </ion-header>
-
+ 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+ 
+    <button (click)="testSignup()">Test Signup</button>
+    <button (click)="testLogin()">Test Login</button>
+    <button (click)="testLogout()">Test Logout</button>
+ 
 </ion-content>
